--- a/src/Box.styles.css
+++ b/src/Box.styles.css
@@ -7,3 +7,15 @@
   width: 250px;
   margin-right: 30px;
 }
+
+@media screen and (min-width: 350px) and (max-width: 756px) {
+  .input-box-guess {
+    width: 80px;
+    margin: 0;
+  }
+
+  .input-box-name {
+    width: 80px;
+    margin: 0;
+  }
+}
