--- a/src/components/WinnerList.styles.css
+++ b/src/components/WinnerList.styles.css
@@ -5,6 +5,13 @@
 }
 
 p {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: rgb(110, 108, 108);
+}
+
+@media screen and (min-width: 350px) and (max-width: 756px) {
+  p {
+    font-size: 1.2rem;
+    color: rgb(110, 108, 108);
+  }
 }
